--- a/mod.conf
+++ b/mod.conf
@@ -1,2 +1,4 @@
 name = lava_n_water
+title = Lava + Water \= Stone
+description = Cool Lava into technically special stones for easier cleanup
 depends = default
